--- a/src/pages/sport/sport-challenge/sport-challenge.scss
+++ b/src/pages/sport/sport-challenge/sport-challenge.scss
@@ -19,5 +19,31 @@ page-sport-challenge {
     text-shadow: 0px 0px 8px #333333;
   }
 
+  .content {
+    text-align: center;
+  }
+
+  .dateContainer {
+    text-align: center;
+    width: 150px;
+    height: 140px;
+    border-style: solid;
+    border-width: 2px;
+    display: inline-block;
+    margin-top: 20px;
+  }
+
+  .month {
+    font-size: 28px;
+    color: #fff;
+    background-color: #DB4F52;
+  }
+
+  .day {
+    font-size: 70px;
+    margin-top: 7px;
+  }
+
+
 
 }
