Ajouts de Workout

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -23,6 +23,8 @@ $app-direction: ltr;
 // http://ionicframework.com/docs/theming/overriding-ionic-variables/
 
 
+$item-md-detail-push-show: true;
+$item-wp-detail-push-show: true;
 
 
 // Named Color Variables
