--- a/src/pages/sport/sport-challenge/sport-challenge.scss
+++ b/src/pages/sport/sport-challenge/sport-challenge.scss
@@ -6,7 +6,6 @@ page-sport-challenge {
 
 .card-background-page {
 
-
   ion-card {
     position: relative;
     text-align: center;
@@ -33,7 +32,7 @@ page-sport-challenge {
     border-style: solid;
     border-width: 2px;
     display: inline-block;
-    margin-top: 20px;
+    margin-top: 40px;
   }
 
   .month {
@@ -53,17 +52,40 @@ page-sport-challenge {
     margin-top: 100px;
   }
 
-  .checkbox-md .checkbox-checked {
-      border-color: #DB4F52;
-      //background-color: #F95F62;
+  .checkbox-container {
+    margin-top: 70px;
+    display: inline-block;
   }
 
   .done {
-    margin-top: 70px;
-    size:50px;
+    display: flex;
+    font-size: 18px;
+    color: white;
+    background-color: #F95F62;
+    border-radius: 2px;
   }
 
+  .item-md.item-block .item-inner {
+    border:none;
+  }
 
+  .item.item-md .checkbox-md {
+      margin: 9px 15px 9px 4px;
+  }
 
+  .checkbox-md .checkbox-checked .checkbox-inner {
+      left: 7px;
+      top: 2px;
+      width: 7px;
+      height: 15px;
+  }
+
+  .checkbox-md .checkbox-icon {
+    border-color: #fff;
+    background-color: #F95F62;
+    width: 25px;
+    height: 25px;
+
+  }
 
 }
