Add food challenge

--- a/src/pages/food/food-challenge/food-challenge.scss
+++ b/src/pages/food/food-challenge/food-challenge.scss
@@ -1,4 +1,4 @@
-page-sport-challenge {
+page-food-challenge {
 
 }
 
@@ -36,7 +36,7 @@ page-sport-challenge {
   .month {
     font-size: 28px;
     color: #fff;
-    background-color: #DB4F52;
+    background-color: #75CD7E;
   }
 
   .day {
@@ -59,7 +59,7 @@ page-sport-challenge {
     display: flex;
     font-size: 18px;
     color: white;
-    background-color: #F95F62;
+    background-color: #87E990;
     border-radius: 2px;
   }
 
@@ -80,7 +80,7 @@ page-sport-challenge {
 
   .checkbox-md .checkbox-icon {
     border-color: #fff;
-    background-color: #F95F62;
+    background-color: #87E990;
     width: 25px;
     height: 25px;
 
