Set header bar color

--- a/src/pages/food/food-challenge/food-challenge.scss
+++ b/src/pages/food/food-challenge/food-challenge.scss
@@ -1,6 +1,20 @@
 page-food-challenge {
 
+  .toolbar-background-md {
+      background: #87E990;
+  }
+
+  .toolbar-title-md {
+      color: white;
+  }
+
+  .back-button-icon-md {
+      color: white;
+  }
+
 }
+
+
 
 .card-background-page {
 
