--- a/src/pages/food/food-home/food-home.scss
+++ b/src/pages/food/food-home/food-home.scss
@@ -1,5 +1,17 @@
 page-food-home {
 
+  .toolbar-background-md {
+      background: #87E990;
+  }
+
+  .toolbar-title-md {
+      color: white;
+  }
+
+  .back-button-icon-md {
+      color: white;
+  }
+
 }
 
 .card-background-page {
@@ -25,6 +37,6 @@ page-food-home {
     width: 100%;
     color: #fff;
   }
-  
+
 
 }
