--- a/src/pages/sport/sport-challenge/sport-challenge.scss
+++ b/src/pages/sport/sport-challenge/sport-challenge.scss
@@ -1,6 +1,19 @@
 page-sport-challenge {
 
+  .toolbar-background-md {
+      background: #F95F62;
+  }
+
+  .toolbar-title-md {
+      color: white;
+  }
+
+  .back-button-icon-md {
+      color: white;
+  }
+
 }
+
 
 .card-background-page {
 
