--- a/src/pages/food/food-starters/food-starters.scss
+++ b/src/pages/food/food-starters/food-starters.scss
@@ -1,5 +1,17 @@
 page-food-starters {
 
+  .toolbar-background-md {
+      background: #87E990;
+  }
+
+  .toolbar-title-md {
+      color: white;
+  }
+
+  .back-button-icon-md {
+      color: white;
+  }
+
 }
 
 .card-background-page {
@@ -8,10 +20,10 @@ page-food-starters {
     position: relative;
     text-align: center;
   }
-  
+
   ul, li {
     display : inline;
-  } 
+  }
 
   .buttonInfo {
     float : right;
