--- a/src/pages/sport/sport-home/sport-home.scss
+++ b/src/pages/sport/sport-home/sport-home.scss
@@ -1,5 +1,17 @@
 page-sport-home {
 
+  .toolbar-background-md {
+      background: #F95F62;
+  }
+
+  .toolbar-title-md {
+      color: white;
+  }
+
+  .back-button-icon-md {
+      color: white;
+  }
+
 }
 
 .card-background-page {
