--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -35,11 +35,13 @@ $item-wp-detail-push-show: true;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
-  danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222
+  primary:        #488aff,
+  primary-rose:   #F95F62,
+  primary-green:  #87E990,
+  secondary:      #32db64,
+  danger:         #f53d3d,
+  light:          #f4f4f4,
+  dark:           #222
 );
 
 
