--- a/src/pages/food/food-desserts/food-desserts.scss
+++ b/src/pages/food/food-desserts/food-desserts.scss
@@ -1,8 +1,30 @@
 page-food-desserts {
+  .toolbar-background-md {
+      background: #87E990;
+  }
 
+  .toolbar-title-md {
+      color: white;
+  }
+
+  .back-button-icon-md {
+      color: white;
+  }
 }
 
 .card-background-page {
+ 
+  .calories {
+    float : left;
+  }
+
+  .nutritionInfos {
+    float : left;
+    clear : left;
+  }
+  .nutritionInfos p {
+    text-align : left;
+  }
 
   ion-card {
     position: relative;
@@ -10,27 +32,12 @@ page-food-desserts {
   }
   
   ul, li {
+    padding: 0;
     display : inline;
   } 
 
   .buttonInfo {
     float : right;
-  }
-  .card-title {
-    position: absolute;
-    top: 36%;
-    font-size: 2.0em;
-    width: 100%;
-    font-weight: bold;
-    color: #fff;
-  }
-
-  .card-subtitle {
-    font-size: 1.0em;
-    position: absolute;
-    top: 52%;
-    width: 100%;
-    color: #fff;
   }
 
 }
