--- a/src/pages/food/food-starters/food-starters.scss
+++ b/src/pages/food/food-starters/food-starters.scss
@@ -16,33 +16,25 @@ page-food-starters {
 
 .card-background-page {
 
-  ion-card {
-    position: relative;
-    text-align: center;
+  .calories {
+    float : left;
+  }
+
+  .nutritionInfos {
+    float : left;
+    clear : left;
+  }
+  .nutritionInfos p {
+    text-align : left;
   }
 
   ul, li {
-    display : inline;
+    padding: 0;
+    list-style: none;
   }
 
   .buttonInfo {
     float : right;
-  }
-  .card-title {
-    position: absolute;
-    top: 36%;
-    font-size: 2.0em;
-    width: 100%;
-    font-weight: bold;
-    color: #fff;
-  }
-
-  .card-subtitle {
-    font-size: 1.0em;
-    position: absolute;
-    top: 52%;
-    width: 100%;
-    color: #fff;
   }
 
 }
