--- a/src/pages/sport/sport-challenge/sport-challenge.scss
+++ b/src/pages/sport/sport-challenge/sport-challenge.scss
@@ -54,7 +54,7 @@ page-sport-challenge {
       margin-top: 7px;
     }
 
-    .sport-date-container .advice {
+    .advice {
       font-size: 28px;
       color: #373E45;
       margin-top: 100px;
