--- a/src/pages/feed/feed.scss
+++ b/src/pages/feed/feed.scss
@@ -24,6 +24,23 @@ page-feed {
       color: #fff;
     }
 
+    .button-container {
+      margin: 0 10px 0 10px;
+    }
+
+    .button-container button {
+      padding: 0px;
+      margin: 5px;
+    }
+
+    ion-icon {
+      color: #333;
+    }
+
+    .col {
+      align-self: center;
+    }
+
   }
 
 }
