--- a/src/pages/sport/sport-workout/sport-workout.scss
+++ b/src/pages/sport/sport-workout/sport-workout.scss
@@ -12,24 +12,10 @@ page-sport-workout {
       color: white;
   }
 
-}
-
-.card-background-page {
-
-  ion-card {
-    position: relative;
-    text-align: center;
+  .soustitre {
+    color: grey;
+    font-size: 14px;
   }
 
-  .card-title {
-    position: absolute;
-    top: 40%;
-    font-size: 2.0em;
-    width: 100%;
-    font-weight: bold;
-    color: #fff;
-    text-shadow: 0px 0px 8px #333333;
-  }
-
-
 }
+
