ajout d'une carte sur feed

--- a/src/pages/sport/sport-workout/sport-exercises/sport-workout-leg-simpleleglift/sport-workout-leg-simpleleglift.scss
+++ b/src/pages/sport/sport-workout/sport-exercises/sport-workout-leg-simpleleglift/sport-workout-leg-simpleleglift.scss
@@ -5,13 +5,13 @@ page-sport-workout-leg-simpleleglift {
       position: relative;
       text-align: center;
 
- 
-  
     .back-button-icon-md {
         color: white;
     }
-  
+
     }
+
+
 
     .card-title {
       position: absolute;
@@ -35,5 +35,9 @@ page-sport-workout-leg-simpleleglift {
 
 .back-button-icon-md {
     color: white;
+}
+
+.ion-card-title{
+  font-size: 1.0em;
 }
 }
