--- a/src/pages/tabs/tabs.scss
+++ b/src/pages/tabs/tabs.scss
@@ -22,3 +22,13 @@ tabs {
 .tabs-md .tab-button[aria-selected="true"]#tab-t0-1 .tab-button-icon {
   color: #87E990;
 }
+
+//Feed icon colors
+
+.tabs-md .tab-button[aria-selected="true"]#tab-t0-2 {
+  color: #7bc6fc;
+}
+
+.tabs-md .tab-button[aria-selected="true"]#tab-t0-2 .tab-button-icon {
+  color: #7bc6fc;
+}
