--- a/src/pages/feed/feed.scss
+++ b/src/pages/feed/feed.scss
@@ -41,6 +41,12 @@ page-feed {
       align-self: center;
     }
 
-  }
+    .titre {
+      font-weight: bold;
+      font-size: 1.1em;
+    }
 
+
+
+  }
 }
