--- a/src/pages/sport/sport-home/sport-home.scss
+++ b/src/pages/sport/sport-home/sport-home.scss
@@ -12,6 +12,10 @@ page-sport-home {
       color: white;
   }
 
+  .icon {
+    color: white;
+  }
+
   .card-background-page {
 
     ion-card {
@@ -28,8 +32,6 @@ page-sport-home {
       color: #fff;
       text-shadow: 0px 0px 8px #333333;
     }
-
-
   }
 
 
