--- a/src/pages/profile/profile-home/profile-home.scss
+++ b/src/pages/profile/profile-home/profile-home.scss
@@ -14,7 +14,9 @@
   color:white;
 }
 
-
+.icon{
+    color:white;
+}
 
 .profile-page {
 
@@ -53,11 +55,11 @@
           color: #000000;
         }
       }
-    
-    }
+
+
     body {
       cursor: url('https://ionicframework.com/img/finger.png'), auto;
-    }    
+    }
     p {
       text-align: center;
       margin-bottom: 20px ;
@@ -65,7 +67,7 @@
     .spinner svg {
       width: 19% ;
       height: 85px;
-    } 
+    }
     .scroll-content {
       background-color: map-get($colors, light);
   }
@@ -75,7 +77,7 @@ ion-card-header {
 }
 
 ion-card {
-  position: relative;  
+  position: relative;
 }
 ion-slides{
   height: fit-content;
@@ -88,14 +90,14 @@ ion-slides{
 .container {
   text-align: center;
   width: 350px;
-  height: 150px; 
+  height: 150px;
   size: auto;
   border-style: solid;
   border-width: 4px;
   display: inline-block;
   margin-top: 30px;
   margin-bottom: 30px ;
-  
+
 }
 
 .container .containerHeader {
@@ -126,5 +128,4 @@ ion-slides{
         width: 19% !important;
         height: 85px !important;
       }
-
-    
+}
