--- a/src/pages/food/food-starters/food-starters.scss
+++ b/src/pages/food/food-starters/food-starters.scss
@@ -21,6 +21,17 @@ page-food-starters {
       color: white;
   }
 
+  .footer{
+    color: white;
+    font-size: 1.5rem;
+    width: 100%;
+    font-weight: bold;
+  }
+
+  ion-badge {
+    font-size: 1.6rem;
+  }
+
   .card-background-page {
 
     ion-card {
