--- a/src/pages/settings/settings.scss
+++ b/src/pages/settings/settings.scss
@@ -1,29 +1,31 @@
-.toolbar-background-md {
-    background: rgb(252, 171, 79);
-  }
-  
-  .toolbar-title-md {
-    color: white;
-  }
-  
-  .back-button-icon-md {
-    color: white;
-  }
-  
-  .toolbar-buttons .icon {
-    color:white;
-  }
-  
-  body {
-    cursor: url('https://ionicframework.com/img/finger.png'), auto;
-  }
-  p {
-    text-align: center;
-    margin-bottom: 40px ;
-  }
-  .spinner svg {
-    width: 19% ;
-    height: 85px ;
-  }
+page-settings{
+  .toolbar-background-md {
+      background: rgb(252, 171, 79);
+    }
 
-  
+    .toolbar-title-md {
+      color: white;
+    }
+
+    .back-button-icon-md {
+      color: white;
+    }
+
+    .toolbar-buttons .icon {
+      color:white;
+    }
+
+    body {
+      cursor: url('https://ionicframework.com/img/finger.png'), auto;
+    }
+    p {
+      text-align: center;
+      margin-bottom: 40px ;
+    }
+    .spinner svg {
+      width: 19% ;
+      height: 85px ;
+    }
+
+
+}
