--- a/src/pages/food/food-starters/food-starters.scss
+++ b/src/pages/food/food-starters/food-starters.scss
@@ -13,6 +13,11 @@ page-food-starters {
     text-align: center;
   }
 
+  .bar-button-md{
+    color: white;
+    font-size: 1.5rem;
+  }
+
   .toolbar-title-md {
       color: white;
   }
@@ -65,6 +70,17 @@ page-food-starters {
 
     .calories {
       float : left;
+      margin: 0 0 2px;
+overflow: inherit;
+font-size: 1.4rem;
+line-height: normal;
+text-overflow: inherit;
+color: #666;
+    }
+
+    .txtGras {
+      font-weight: bold;
+      display : inline;
     }
 
     .nutritionInfos {
