--- a/src/pages/profile/profile-home/profile-home.scss
+++ b/src/pages/profile/profile-home/profile-home.scss
@@ -19,7 +19,12 @@
 }
 
 .profile-page {
+      font-family: Noto Sans;
 
+      .badges{
+        height: 100px;
+        width: auto;
+      }
       .toolbar-background {
         background: #fff;
         border-color: transparent;
@@ -27,6 +32,10 @@
 
       .slide-zoom {
         height: 100%;
+      }
+
+      .slide-title {
+        font-size: 40px;
       }
 
       .profile-name {
@@ -69,7 +78,7 @@
       height: 85px;
     }
     .scroll-content {
-      background-color: map-get($colors, light);
+      background-color: #ffffff;
   }
 
 ion-card-header {
@@ -89,14 +98,15 @@ ion-slides{
 
 .container {
   text-align: center;
-  width: 350px;
-  height: 150px;
+  width: 250px;
+  height: 200px;
   size: auto;
   border-style: solid;
-  border-width: 4px;
+  border-width: 2px;
   display: inline-block;
   margin-top: 30px;
   margin-bottom: 30px ;
+  border-radius: 0px 0px 20px 20px;
 
 }
 
