--- a/src/pages/settings/settings.scss
+++ b/src/pages/settings/settings.scss
@@ -1,3 +1,4 @@
+
 .toolbar-background-md {
     background: rgb(252, 171, 79);
   }
@@ -24,6 +25,16 @@
   .spinner svg {
     width: 19% ;
     height: 85px ;
+  }
+  .avatar {
+    width: 150px;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .infosUser{
+    font-family: Noto Sans;
   }
 
   
