Add challenges toast, change feed color

--- a/src/pages/food/food-challenge/food-challenge.scss
+++ b/src/pages/food/food-challenge/food-challenge.scss
@@ -93,10 +93,12 @@ page-food-challenge {
       background-color: #87E990;
       width: 25px;
       height: 25px;
-
     }
 
   }
 
+}
 
+.toast-md .toast-wrapper.toast-bottom {
+  bottom: 54px;
 }
