--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,6 +38,7 @@ $colors: (
   primary:        #488aff,
   primary-rose:   #F95F62,
   primary-green:  #87E990,
+  primary-blue:   #5fb5e4,
   secondary:      #32db64,
   danger:         #f53d3d,
   light:          #f4f4f4,
