--- a/src/pages/feed/feed.scss
+++ b/src/pages/feed/feed.scss
@@ -1,8 +1,21 @@
 page-feed {
+
+  .toolbar-background-md {
+      background: #5fb5e4; // bleu plus foncé: #3085b4
+  }
+
+  .toolbar-title-md {
+      color: white;
+  }
+
+  .back-button-icon-md {
+      color: white;
+  }
+
   .icon{
     color: white;
     }
-    
+
   .card-background-page {
 
     ion-card {
