Edit style Profile

--- a/src/pages/feed/feed.scss
+++ b/src/pages/feed/feed.scss
@@ -4,6 +4,10 @@ page-feed {
       background: #0080FF;
   }
 
+  .toolbar-title-md {
+      color: white;
+  }
+
   .icon{
     color: white;
     }
