--- a/src/pages/sport/sport-dating/sport-dating.scss
+++ b/src/pages/sport/sport-dating/sport-dating.scss
@@ -1,23 +1,10 @@
 page-sport-dating {
-
-}
-
-.card-background-page {
-
-  ion-card {
-    position: relative;
-    text-align: center;
+  .scroll {
+    height: 100%
   }
 
-  .card-title {
-    position: absolute;
-    top: 40%;
-    font-size: 2.0em;
+  #map {
     width: 100%;
-    font-weight: bold;
-    color: #fff;
-    text-shadow: 0px 0px 8px #333333;
+    height: 100%;
   }
-
-
 }
