--- a/src/pages/settings/settings.scss
+++ b/src/pages/settings/settings.scss
@@ -28,8 +28,11 @@ page-settings{
     }
     .avatar {
       display: block;
+      height: 200px;
+      width: 200px;
       margin-left: auto;
       margin-right: auto;
+      margin-bottom: 10px;
     }
 
 }
