--- a/src/pages/food/food-recipes-home/food-recipes-home.scss
+++ b/src/pages/food/food-recipes-home/food-recipes-home.scss
@@ -2,6 +2,9 @@ page-food-recipes-home {
    
 
   ion-card-content { font-family : Noto Sans; }
+  ion-card-title {font-size:20em; }
+  img {height: 400px; width: 450px}
+
 
   .title {
     color: gray;
