--- a/src/pages/sport/sport-workout/sport-exercises/sport-workout-leg-simpleleglift/sport-workout-leg-simpleleglift.scss
+++ b/src/pages/sport/sport-workout/sport-exercises/sport-workout-leg-simpleleglift/sport-workout-leg-simpleleglift.scss
@@ -28,6 +28,10 @@ page-sport-workout-leg-simpleleglift {
   .toolbar-background-md {
     background: #F95F62;
 }
+  #image{
+    width:300px;
+    height:auto;
+  }
 
 .toolbar-title-md {
     color: white;
